updated signature to a cleaner version, fixed some padding with the contact form and footer spacing

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -186,6 +186,10 @@ nav.navbar {
 	box-shadow: 0 0 25px rgba(0,0,0,0.3);
 }
 
+.links {
+	margin-top: 2.5rem;
+}
+
 /**********************************************
 * Footer Styles
 /*********************************************/
@@ -193,6 +197,7 @@ nav.navbar {
 footer {
 	background-color: #232F61;
 	color: white;
+	margin-top: 5rem;
 }
 
 a {
